--- a/index.html
+++ b/index.html
@@ -1,10 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="google-site-verification" content="wX2vFir83oiun9clqr5UzWy243_Gb2KTx3uUUAfhiMs" />
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Drive Audio Player – Google Drive Music Player</title>
+
+    <!-- Google Search Console verification -->
+    <meta name="google-site-verification" content="wX2vFir83oiun9clqr5UzWy243_Gb2KTx3uUUAfhiMs" />
+
+    <meta name="description" content="Play music from Google Drive. No ads. Full control. A simple web-based Google Drive music player for your own MP3 files." />
   </head>
   <body>
+    <h1>Drive Audio Player – Google Drive Music Player</h1>
+
+    <p><strong>Play music from Google Drive. No ads. Full control.</strong></p>
+
+    <p>
+      Drive Audio Player lets you play your own MP3 files directly from Google Drive —
+      without subscriptions, syncing, or interruptions.
+    </p>
+
+    <p>
+      <img
+        src="images/google-drive-music-player-interface.png"
+        alt="Google Drive music player interface"
+        width="800"
+      />
+    </p>
+
+    <h2>Demo</h2>
+    <p>
+      <a href="https://youtu.be/pvxFkeY2ZPs">
+        Watch the demo video on YouTube
+      </a>
+    </p>
+
+    <h2>Try it</h2>
+    <p>
+      <a href="https://driveaudioplayer.com">
+        https://driveaudioplayer.com
+      </a>
+    </p>
   </body>
 </html>
