--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://neil-brown.github.io/DriveAudioPlayer/" />
   <meta property="og:image" content="https://neil-brown.github.io/DriveAudioPlayer/images/google-drive-music-player-interface.png" />
+  <link rel="canonical" href="https://driveaudioplayer.com">
 
   <style>
     body {
